# WardrobeDesigner

./: .gitignore  .gitmodules  CMakeLists.txt  PRODUCTCHARTER.md  ProjectCharter.docx  README.md  imgui.ini
build-release/res/glsl/: colorPickFrag.glsl  frag.glsl  vert.glsl  vertDebugQuad.glsl  vertDepthShader.glsl  vertSkybox.glsl
include/: Algorythm.h  ArcBallCamera.hpp  Camera.h  Cluster.h  Controls.h  GUIRenderer.hpp  Model.h  MousePicker.hpp  ObjectLoader.h  Program.hpp  Scene.hpp  Shader.hpp  State.hpp  Texture.hpp  Tools.hpp  WardrobeGenerator.hpp  Window.h
include/Object/: Cube.hpp  IObject.hpp  Sphere.hpp
include/Object/WardrobeElements/: WardrobeEdge.hpp  WardrobeHorizontalShelf.hpp  WardrobeVerticalElement.hpp  WardrobeVerticalShelf.hpp
src/: ArcBallCamera.cpp  Camera.cpp  Cluster.cpp  Controls.cpp  GUIRenderer.cpp  Logger.hpp  MousePicker.cpp  ObjectLoader.cpp  Program.cpp  Scene.cpp  Shader.cpp  Texture.cpp  Tools.cpp  WardrobeGenerator.cpp  Window.cpp  main.cpp
src/Controls/: Controls.cpp
src/Object/: Cube.cpp  IObject.cpp  IObject.hpp  Sphere.cpp
src/Object/WardrobeElements/: WardrobeEdge.cpp  WardrobeHorizontalShelf.cpp  WardrobeVerticalElement.cpp  WardrobeVerticalShelf.cpp
src/Texture/: Texture.cpp  Texture.hpp
